<resources>
    <string name="app_name">Weather Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="location">location</string>
    <string name="time">time</string>
    <string name="condition">condition</string>
    <string name="highest_temp">H: %1$.1f °</string>
    <string name="lowest">L: %1$.1f °</string>
    <string name="notification_sample">%1$s shared a post</string>
    <string name="search_for_a_location">Search for a location</string>
    <string name="my_location">My Location</string>
    <string name="temp_c">%1$.1f °</string>
    <string name="hourly_forecast">HOURLY FORECAST</string>
    <string name="_10_day_forecast">10-DAY FORECAST</string>
    <string name="day">day</string>
    <string name="ratio">%1$d%%</string>
    <string name="weather_condition">WEATHER CONDITION</string>
    <string name="humidity">Humidity</string>
    <string name="wind_speed">Wind speed</string>
    <string name="rain">Rain</string>
    <string name="speed">%1$.1f Km/h</string>

</resources>