<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="20dp"
    android:layout_margin="20dp"
    android:background="@drawable/background_weather_view"
    android:orientation="vertical">

        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:textStyle="bold"
            android:text="@string/location"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30sp"
            android:layout_gravity="center">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/icon"
                android:layout_width="80dp"
                android:layout_height="80dp"
                />

            <TextView
                android:id="@+id/temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="40sp"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            />

        <TextView
            android:id="@+id/weather_condition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/condition"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center"
            >
            <TextView
                android:id="@+id/highest_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/highest_temp"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:layout_gravity="center"
                />

            <TextView
                android:id="@+id/lowest_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lowest"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                />

        </LinearLayout>

</LinearLayout>