<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="20dp"
    android:layout_marginBottom="20dp"
    android:layout_marginEnd="20dp"
    android:padding="10dp"
    android:orientation="vertical"
    android:background="@drawable/background_weather_view"
    >

    <TextView
        android:text="@string/weather_condition"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:layout_marginStart="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <View
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="#ADFFFFFF"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/rain"
                android:layout_marginTop="5dp"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/protection"
                android:layout_marginBottom="5dp"/>

            <TextView
                android:id="@+id/chance_of_rain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rain"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/wind"
                android:layout_marginTop="5dp"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/wind"
                android:layout_marginBottom="5dp"/>

            <TextView
                android:id="@+id/wind_speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:text="@string/time"
                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/wind_speed"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/humidity"
                android:layout_marginTop="5dp"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/drop"
                android:layout_marginBottom="5dp"/>

            <TextView
                android:id="@+id/humidity_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:text="@string/time"
                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/humidity"
                android:textColor="@color/white" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>