<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:layout_marginEnd="10dp"
    android:layout_marginStart="10dp"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="#ADFFFFFF"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/day"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"
            android:text="@string/day"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/icon"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                />

            <TextView
                android:id="@+id/chance_of_rain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:textSize="18sp"/>

        </LinearLayout>


        <TextView
            android:id="@+id/lowest_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/lowest"
            android:textColor="@color/white"
            android:layout_marginEnd="10dp"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/highest_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/highest_temp"
            android:textColor="@color/white"
            android:textSize="18sp"/>


    </LinearLayout>

</LinearLayout>