<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/refresh_layout"
    android:background="@drawable/gradient_blue"
    tools:context=".fragment.LocationFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:text="@string/location"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="30sp"
                android:layout_gravity="center">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/ic_sun_behind_cloud"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="21°"
                    android:textSize="40sp"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:layout_marginStart="16dp"
                    />
            </LinearLayout>

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                />

            <TextView
                android:id="@+id/weather_condition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/condition"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                >
                <TextView
                    android:id="@+id/highest_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/highest_temp"
                    android:textSize="24sp"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    />

                <TextView
                    android:id="@+id/lowest_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lowest"
                    android:textSize="24sp"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    />

            </LinearLayout>

            <include
                android:id="@+id/hourly_forecast_weather"
                layout="@layout/hourly_forecast_weather"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"/>

        </LinearLayout>

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:padding="10dp">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/map_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="?attr/selectableItemBackground"
            android:src="@drawable/ic_map" />

    </LinearLayout>
    </RelativeLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
